2003-06-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-anthy.el: Removed.

	* shimbun/sb-canna-dev.el: Removed.

	* shimbun/sb-mozilla-jp.el: Renamed from `shimbun/sb-moz-users.el'.

	* Release emacs-w3m-1.3.4 from emacs-w3m-1_3 branch.

2003-06-18  Koichiro Ohba  <koichiro@meadowy.org>

	* shimbun/sb-rss.el (shimbun-rss-get-encoding): Simplify.

2003-06-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-pocketgames.el (shimbun-reply-to): Insert docstring
	to avoid the bug of XEmacs's byte compiler.

	* shimbun/sb-pilot-mailsync.el (shimbun-reply-to): Ditto.

	* shimbun/sb-dennou.el (shimbun-reply-to): Ditto.

	* shimbun/sb-security-memo.el (shimbun-reply-to): Ditto.

	* w3m.el (w3m-arrived-ignored-regexp): Use "\`" instead of "^".
	(w3m-history-ignored-regexp): Ditto.
	(w3m-url-transfer-encode-string): New inline function.
	(w3m-fontify-anchors): Encode URL with the attribute `charset'.
	(w3m-input-url): Encode URL with `w3m-default-coding-system'.
	(w3m-about-header): Display the current anchor information.

	* w3m-form.el (w3m-form-parse-and-fontify): Encode URL with the
	attribute `charset'.

2003-06-18  Koichiro Ohba  <koichiro@meadowy.org>

	* shimbun/sb-bbc-rss.el: New backend.

	* shimbun/sb-rss.el (shimbun-rss-process-date): Added nil check.

2003-06-18  Koichiro Ohba  <koichiro@meadowy.org>

	* shimbun/sb-rss.el (shimbun-rss-get-encoding): New function.
	(shimbun-headers): Use (shimbun-rss-get-encoding).

2003-06-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Encode messages to terminal while
	formatting info pages.

2003-06-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-sourceforge-jp.el: New backend.

	* shimbun/shimbun.el (shimbun-footer): Insert docstring to avoid
	the bug of XEmacs's byte compiler.

	* shimbun/sb-w3m-dev.el (shimbun-reply-to): Insert docstring to
	avoid the bug of XEmacs's byte compiler.

2003-06-17  NAKAJIMA Mikio  <minakaji@namazu.org>
