@@ -1074,16 +1074,16 @@ NOTE: This function must be called from the top directory."
 		  (fset 'message
 			(byte-compile
 			 (if (boundp 'MULE)
-			     (lambda (fmt &rest args)
-			       (funcall si:message "%s"
-					(code-convert-string
-					 (apply 'format fmt args)
-					 '*internal* '*junet*)))
-			   (lambda (fmt &rest args)
-			     (funcall si:message "%s"
-				      (encode-coding-string
-				       (apply 'format fmt args)
-				       'iso-2022-7bit))))))
+			     `(lambda (fmt &rest args)
+				(funcall ,si:message "%s"
+					 (code-convert-string
+					  (apply 'format fmt args)
+					  '*internal* '*junet*)))
+			   `(lambda (fmt &rest args)
+			      (funcall ,si:message "%s"
+				       (encode-coding-string
+					(apply 'format fmt args)
+					'iso-2022-7bit))))))
 		  (unwind-protect
 		      (texinfo-format-buffer nil)
 		    (fset 'message si:message)))
