@@ -1,3 +1,7 @@
+2003-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3mhack.el (w3mhack-makeinfo): Improve the last change.
+
 2003-06-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* shimbun/sb-anthy.el: Removed.
@@ -5,6 +9,8 @@
 	* shimbun/sb-canna-dev.el: Removed.
 
 	* shimbun/sb-mozilla-jp.el: Renamed from `shimbun/sb-moz-users.el'.
+
+2003-06-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* Release emacs-w3m-1.3.4 from emacs-w3m-1_3 branch.
 
